[gd_scene load_steps=38 format=2]

[ext_resource path="res://Assets/Grenades/explosive-ocal.png" type="Texture" id=1]
[ext_resource path="res://Assets/explosion/expl_06_0011.png" type="Texture" id=2]
[ext_resource path="res://Assets/explosion/expl_06_0013.png" type="Texture" id=3]
[ext_resource path="res://Assets/explosion/expl_06_0014.png" type="Texture" id=4]
[ext_resource path="res://Assets/explosion/expl_06_0007.png" type="Texture" id=5]
[ext_resource path="res://Assets/explosion/expl_06_0019.png" type="Texture" id=6]
[ext_resource path="res://Assets/explosion/expl_06_0016.png" type="Texture" id=7]
[ext_resource path="res://Assets/explosion/expl_06_0006.png" type="Texture" id=8]
[ext_resource path="res://Assets/explosion/expl_06_0010.png" type="Texture" id=9]
[ext_resource path="res://Assets/explosion/expl_06_0026.png" type="Texture" id=10]
[ext_resource path="res://Assets/explosion/expl_06_0021.png" type="Texture" id=11]
[ext_resource path="res://Assets/explosion/expl_06_0022.png" type="Texture" id=12]
[ext_resource path="res://Assets/explosion/expl_06_0005.png" type="Texture" id=13]
[ext_resource path="res://Assets/explosion/expl_06_0008.png" type="Texture" id=14]
[ext_resource path="res://Assets/explosion/expl_06_0015.png" type="Texture" id=15]
[ext_resource path="res://Assets/explosion/expl_06_0028.png" type="Texture" id=16]
[ext_resource path="res://Assets/explosion/expl_06_0027.png" type="Texture" id=17]
[ext_resource path="res://Assets/explosion/expl_06_0002.png" type="Texture" id=18]
[ext_resource path="res://Assets/explosion/expl_06_0029.png" type="Texture" id=19]
[ext_resource path="res://Assets/explosion/expl_06_0018.png" type="Texture" id=20]
[ext_resource path="res://Assets/explosion/expl_06_0017.png" type="Texture" id=21]
[ext_resource path="res://Assets/explosion/expl_06_0000.png" type="Texture" id=22]
[ext_resource path="res://Assets/explosion/expl_06_0012.png" type="Texture" id=23]
[ext_resource path="res://Assets/explosion/expl_06_0031.png" type="Texture" id=24]
[ext_resource path="res://Assets/explosion/expl_06_0030.png" type="Texture" id=25]
[ext_resource path="res://Assets/explosion/expl_06_0020.png" type="Texture" id=26]
[ext_resource path="res://Assets/explosion/expl_06_0003.png" type="Texture" id=27]
[ext_resource path="res://Assets/explosion/expl_06_0023.png" type="Texture" id=28]
[ext_resource path="res://Assets/explosion/expl_06_0004.png" type="Texture" id=29]
[ext_resource path="res://Assets/explosion/expl_06_0009.png" type="Texture" id=30]
[ext_resource path="res://Assets/explosion/expl_06_0024.png" type="Texture" id=31]
[ext_resource path="res://Assets/explosion/expl_06_0025.png" type="Texture" id=32]
[ext_resource path="res://Assets/explosion/expl_06_0001.png" type="Texture" id=33]
[ext_resource path="res://Throwables/MolotovCocktail.gd" type="Script" id=34]

[sub_resource type="CircleShape2D" id=1]
radius = 18.9506

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 33 ), ExtResource( 18 ), ExtResource( 27 ), ExtResource( 29 ), ExtResource( 13 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 14 ), ExtResource( 30 ), ExtResource( 9 ), ExtResource( 2 ), ExtResource( 23 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 15 ), ExtResource( 7 ), ExtResource( 21 ), ExtResource( 20 ), ExtResource( 6 ), ExtResource( 26 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 28 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 10 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 19 ), ExtResource( 25 ), ExtResource( 24 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 162.999

[node name="MolotovCocktail" type="RigidBody2D"]
collision_layer = 16
collision_mask = 13
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 34 )

[node name="MolotovSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 5
vframes = 4
frame = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ExplosionArea" type="Area2D" parent="."]

[node name="Explosion" type="AnimatedSprite" parent="ExplosionArea"]
visible = false
scale = Vector2( 5, 5 )
frames = SubResource( 2 )
speed_scale = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_MolotovCocktail_body_entered"]
[connection signal="animation_finished" from="ExplosionArea/Explosion" to="." method="_on_Explosion_animation_finished"]
